--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9838,15 +9838,11 @@ article#widget_text div.text-widget ul li {
   vertical-align: middle !important;
   padding: 0 0 1.4rem 1rem !important; }
 
-@media screen and (max-width: 39.9375em) {
-  #footer-container, .textwidget, .widget_nav_men {
-    text-align: center; }
-  article {
-    margin: 12.5px 0; } }
-
 @media screen and (max-width: 63.9375em) {
   #footer-container, .textwidget, .widget_nav_men {
-    text-align: center; } }
+    text-align: center; }
+  #footer-container article {
+    margin: 12.5px 0; } }
 
 @media screen and (min-width: 64em) {
   #footer-container .column:last-child:not(:first-child), #footer-container .columns:last-child:not(:first-child), #footer-container .columns:last-child:not(:first-child) {
